crates/dag-macros/tests/ui/workflow_buffer_duplicate.stderr
error: [DAG207] duplicate buffer! for edge `trigger` -> `sink`
  --> tests/ui/workflow_buffer_duplicate.rs:42:5
   |
42 |     buffer!(trigger -> sink, max_items = 12);
   |     ^^^^^^
